[gd_scene load_steps=5 format=2]

[ext_resource path="res://drawing.png" type="Texture" id=1]
[ext_resource path="res://cloud.gd" type="Script" id=2]
[ext_resource path="res://sculpture.gd" type="Script" id=3]
[ext_resource path="res://Node2D.gd" type="Script" id=4]

[node name="Node2D" type="Node2D"]

[node name="Panel" type="Panel" parent="."]
margin_left = -12.0
margin_top = -13.4321
margin_right = 1043.0
margin_bottom = 613.568
__meta__ = {
"_edit_lock_": true
}

[node name="backgr" type="Polygon2D" parent="Panel"]
position = Vector2( 12, 13.4321 )
color = Color( 0.54902, 0.529412, 0.686275, 1 )
polygon = PoolVector2Array( -45.0966, -24.8408, -26.6805, 659.009, 1067.23, 624.633, 1053.73, -22.3854 )

[node name="ground" type="Polygon2D" parent="Panel"]
position = Vector2( 5.54013, 501.939 )
color = Color( 0.133333, 0.372549, 0, 1 )
polygon = PoolVector2Array( -0.778381, 1.34626, 160.994, -24.1385, 302.823, 12.4266, 541.05, -5.30194, 819.166, 15.7507, 1071.8, -16.3823, 1118.34, 104.393, 1115.01, 221.845, -67.2604, 257.302, -45.0997, 0.238228, -45.0997, 0.238228 )
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect" type="TextureRect" parent="Panel"]
margin_left = 620.248
margin_top = 157.128
margin_right = 870.248
margin_bottom = 557.128
texture = ExtResource( 1 )

[node name="cloud" type="Polygon2D" parent="Panel"]
position = Vector2( 376.731, -112.691 )
color = Color( 0.843137, 0.870588, 0.988235, 1 )
polygon = PoolVector2Array( 361.548, 218.521, 409.194, 185.28, 439.111, 214.089, 500.053, 175.307, 534.402, 200.792, 574.291, 158.687, 630.801, 247.33, 582.047, 262.842, 556.562, 269.49, 532.186, 296.083, 483.432, 247.33, 453.515, 288.327, 430.247, 301.623, 392.573, 281.679, 361.548, 262.842, 336.064, 241.789 )
script = ExtResource( 2 )

[node name="sculpture" type="Control" parent="Panel"]
margin_left = 213.133
margin_top = 171.286
margin_right = 463.133
margin_bottom = 571.286
rect_clip_content = true
script = ExtResource( 3 )

[node name="holbut" type="Button" parent="Panel"]
margin_left = 40.2672
margin_top = 34.7723
margin_right = 122.267
margin_bottom = 71.7723
text = "hole"

[node name="chisbut" type="Button" parent="Panel"]
margin_left = 137.772
margin_top = 34.6832
margin_right = 231.772
margin_bottom = 70.6832
text = "chisel"

[node name="Button" type="Button" parent="Panel"]
margin_left = 1097.44
margin_top = 43.0
margin_right = 1211.44
margin_bottom = 100.0
text = "do the thing"

[node name="startbut" type="Button" parent="Panel"]
margin_left = 194.0
margin_top = 159.0
margin_right = 489.0
margin_bottom = 584.0
text = "Start from Nothing"

[node name="fldbut" type="Button" parent="Panel"]
margin_left = 249.0
margin_top = 36.0
margin_right = 375.0
margin_bottom = 71.0
text = "Remove Piece"

[node name="scorebut" type="Button" parent="Panel"]
margin_left = 922.031
margin_top = 35.6044
margin_right = 1015.03
margin_bottom = 91.6044
text = "Score?"

[node name="restartbut" type="Button" parent="Panel"]
margin_left = 761.198
margin_top = 35.6044
margin_right = 906.198
margin_bottom = 64.6044
text = "Restart from Nothing"

[node name="Node2D" type="Node2D" parent="Panel"]
script = ExtResource( 4 )
[connection signal="gui_input" from="Panel/sculpture" to="Panel/sculpture" method="_on_sculpture_gui_input"]
[connection signal="pressed" from="Panel/holbut" to="Panel/sculpture" method="_on_holbut_pressed"]
[connection signal="pressed" from="Panel/chisbut" to="Panel/sculpture" method="_on_chisbut_pressed"]
[connection signal="pressed" from="Panel/Button" to="Panel/sculpture" method="_on_Button_pressed"]
[connection signal="pressed" from="Panel/startbut" to="Panel/sculpture" method="_on_startbut_pressed"]
[connection signal="pressed" from="Panel/fldbut" to="Panel/sculpture" method="_on_fldbut_pressed"]
[connection signal="pressed" from="Panel/scorebut" to="Panel/sculpture" method="_on_scorebut_pressed"]
[connection signal="pressed" from="Panel/restartbut" to="Panel/sculpture" method="_on_restartbut_pressed"]
